Adelanto del Proyecto + Nuevas funciones
Agregando funciones al cajero, la seccion del administrador esta casi lista.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/Supermercado.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.sqljdbc42.jar=C:\\Users\\Vivia Jones\\Desktop\\JDBC\\SQL Server\\sqljdbc42.jar
+file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
